# napari-cutter

./: LICENSE  README.md  setup.cfg  setup.py  tox.ini
napari_cutter/: _function.py
napari_cutter/_tests/: test_function.py
