[metadata]
name = napari-cutter
author = Alexandre Hego
author_email = alexandre.hego@uliege.be
license = BSD-3
url = https://github.com/Alexh3g0/napari-cutter
description = trial of plugins by Robert Haase
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/Alexh3g0/napari-cutter/issues
    Documentation = 'https://github.com/Alexh3g0/napari-cutter#README.md'
    Source Code = https://github.com/Alexh3g0/napari-cutter
    User Support = https://github.com/Alexh3g0/napari-cutter/issues

[options]
packages = find:
python_requires = >=3.7
setup_requires = setuptools_scm
# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-cutter = napari_cutter
